2010-07-30

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/folderview.c
	  src/mainwindow.[ch]: added new global option 'Change current account
	  on folder open'.
	  Made 'mark_as_read_on_new_window' a hidden option.

2010-07-30

	* src/inc.c: added 'Cancel all' button to the incorporation dialog.

2010-07-30

	* src/summaryview.c: summary_mark_displayed_read(): made
	  mark_as_read_on_new_window setting work.

2010-07-30

	* libsylph/folder.c: folder_destroy(): remove private data after
	  folder_tree_destroy() to prevent warnings.
	* libsylph/prefs_account.[ch]
	  src/compose.c
	  src/prefs_account_dialog.c: added new account option 'Put signature
	  before quote (not recommended)'.

2010-07-30

	* src/summaryview.c: summary_selection_changed(): don't clear message
	  view on multiple selection and always_show_msg mode.
	* libsylph/prefs_common.c: made always_show_message_when_selected
	  enable by default.

2010-07-29

	* src/prefs_common_dialog.c: modified description of Junk mail folder.

2010-07-29

	* libsylph/procmsg.c
	  src/folderview.c: added 'Empty junk' context menu to Junk folder.

2010-07-29

	* libsylph/prefs_common.c
	  src/main.c
	  src/summaryview.c: use default Junk folder when
	  prefs_common.junk_folder is not set.

2010-07-29

	* libsylph/mh.c
	  libsylph/folder.[ch]
	  libsylph/defs.h
	  src/icons/stock_spam_16.png
	  src/icons/Makefile.am
	  src/foldersel.c
	  src/prefs_folder_item.c
	  src/stock_pixmap.[ch]
	  src/folderview.c: added 'Junk' special folder and automatically
	  create it when not exist.

2010-07-28

	* src/folderview.c: folderview_menu_popup(): show/hide needless items
	  depending on context.

2010-07-28

	* src/summaryview.[ch]
	  src/mainwindow.c: improved the always-show-msg-on-summary-select
	  mode (don't mark as read on automatic selection).

2010-07-27

	* libsylph/sylmain.c
	  src/main.c: moved ssl_init()/ssl_done() from
	  syl_init()/syl_cleanup() to src/main. Fixes accepted SSL certs