@@ -1,3 +1,8 @@
+2010-08-02
+
+	* src/inc.[ch]: made the progress of receive dialog display only
+	  number/size in current session, not including already received ones.
+
 2010-07-30
 
 	* libsylph/prefs_common.[ch]
